# bff

./: Bff'.hs  Bff.hs  BffBot.hs  BffInterpret.hs  Improve.lhs  MyInterpret.hs  QuickCheck.hs  QuickCheckTH.hs  SimpleTree.hs  Stats.hs  StatsDef.hs  StatsPrint.hs  StatsRender.hs  Test.hs  TestZippableDeriver.hs  ZipperImproverTest.hs  bff-cgi.hs  bff-shell.hs  bff.cabal  testcgi.py
Data/: Bff.hs  IntMapEq.hs  IntMapOrd.hs  SimpleTree.hs  Zippable.hs
Data/Derive/: Zippable.hs
Data/Zippable/: Definition.hs
