name:           bff
version:        0.1

author:         Janis Voigtländer

category:       Development, Language
synopsis:       Bidirectionalization for free

build-type:     Simple
cabal-version:  >= 1.2

extra-source-files:
        QuickCheckTH.hs
        QuickCheck.hs
	testcgi.py

library
        exposed-modules:
                Data.SimpleTree
                Data.Zippable
                Data.IntMapEq
                Data.IntMapOrd
                Bff
        other-modules:
                Data.Derive.Zippable
                Data.Zippable.Definition
        build-depends:
                base, containers, mtl, template-haskell, category-extras, derive,
                haskell98, bimap, unix
        
executable bff-shell
        main-is:
                bff-shell.hs
        build-depends:
                base, directory, hint
        other-modules:
                MyInterpret

executable bff-cgi
        main-is:
                bff-cgi.hs
        build-depends:
                base, directory, xhtml, cgi, hint, utf8-string
        other-modules:
                MyInterpret

executable bff-stats
        main-is:
                Stats.hs
        other-modules:
                Bff'
