name:           bff
version:        0.1
license:        PublicDomain
description:
        This is an implementation of the ideas presented in “Bidirectionalization
        For Free” from the same author.
        .
        It also includes an automatic deriver for the Zippable type class.

author:         Janis Voigtländer, Joachim Breitner

maintainer:     Janis Voigtländer

category:       Development, Language
synopsis:       Bidirectionalization for free

build-type:     Simple
cabal-version:  >= 1.2

extra-source-files:
        QuickCheckTH.hs
        QuickCheck.hs
        testcgi.py

flag binaries
        description: Build the binaries bff-shell and bff-cgi
        default: False

flag stats
        description: Build the stats-generating program
        default: False

library
        exposed-modules:
                Data.SimpleTree
                Data.Zippable
                Data.IntMapEq
                Data.IntMapOrd
                Bff
        other-modules:
                Data.Derive.Zippable
                Data.Zippable.Definition
        build-depends:
                base, containers, mtl, template-haskell, category-extras, derive,
                haskell98, bimap, unix
        
executable bff-shell
        main-is:
                bff-shell.hs
        other-modules:
                MyInterpret
        if flag(binaries)
                build-depends:
                        base, directory, hint
                buildable: True 
        else
                buildable: False

executable bff-cgi
        buildable: False 
        main-is:
                bff-cgi.hs
        other-modules:
                MyInterpret
        if flag(binaries)
                build-depends:
                        base, directory, xhtml, cgi, hint, utf8-string
                buildable: True 
        else
                buildable: False

executable bff-stats
        main-is:
                Stats.hs
        other-modules:
                Bff'
        if flag(stats)
                buildable: True 
                build-depends:
                        Chart >= 0.8
                        , benchpress >= 0.2.2.2
        else
                buildable: False

