name:           bff
version:        0.1
license:        PublicDomain
description:
        This is an implementation of the ideas presented in "Bidirectionalization
        for Free!" (paper at POPL'09) by Janis Voigtlaender.
        .
        It also includes an automatic deriver for the Zippable type class.
        .
        Using the cabal flag "binaries" will enable the creation of a web frontend
        to bff, in the form of a CGI program. Make sure you understand the
        security implications before allowing untrusted access to the script.
        .
        Using the cabal flag "stats" will generate a program that collects performance
        statistics about bff and render them as PNG or PDF files.

author:         Janis Voigtlaender, Joachim Breitner

maintainer:     Janis Voigtlaender

category:       Development, Language
synopsis:       Bidirectionalization for Free

build-type:     Simple
cabal-version:  >= 1.2

extra-source-files:
        QuickCheckTH.hs
        QuickCheck.hs
        testcgi.py

flag binaries
        description: Build the binaries bff-shell and bff-cgi
        default: False

flag stats
        description: Build the stats-generating program
        default: False

library
        exposed-modules:
                Data.SimpleTree
                Data.Zippable
                Data.IntMapEq
                Data.IntMapOrd
                Data.Bff
        other-modules:
                Data.Derive.Zippable
                Data.Zippable.Definition
        build-depends:
                base, containers, mtl, template-haskell, category-extras == 0.53.5, derive == 0.1.1,
                haskell98, bimap == 0.2.3 || == 0.2.4, unix
        
executable bff-shell
        main-is:
                bff-shell.hs
        other-modules:
                MyInterpret
        if flag(binaries)
                build-depends:
                        base, directory, hint
                buildable: True 
        else
                buildable: False

executable bff-cgi
        main-is:
                bff-cgi.hs
        other-modules:
                MyInterpret
        if flag(binaries)
                build-depends:
                        base, directory, xhtml, cgi, hint, utf8-string
                buildable: True 
        else
                buildable: False

executable bff-stats
        main-is:
                Stats.hs
        other-modules:
                StatsDef
        if flag(stats)
                buildable: True 
                build-depends:
                        benchpress >= 0.2.2.2
        else
                buildable: False

executable bff-stats-print
        main-is:
                StatsPrint.hs
        other-modules:
                StatsDef
        if flag(stats)
                buildable: True 
        else
                buildable: False

executable bff-stats-render
        main-is:
                StatsRender.hs
        other-modules:
                StatsDef
        if flag(stats)
                buildable: True 
                build-depends:
                        Chart >= 0.8
        else
                buildable: False
